styled grid with css
Signed-off-by: Your Name <you@example.com>

--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <script src="game.js" defer></script>
 </head>
 <body>
+<header>
 
+</header>
 <main>
-    <div class="grid">
+    <div class="game">
+        <div class="controls">
 
+        </div>
+        <div class="grid"></div>
     </div>
 </main>
+<footer>
 
+</footer>
 </body>
 </html>
