added tile coloring on hover
Signed-off-by: Your Name <you@example.com>

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
 <header>
-
 </header>
 <main>
     <div class="game">
         <div class="controls">
-
+        <button>New Grid</button>
         </div>
         <div class="grid"></div>
     </div>
