changed game sizes also added grid generation.
Signed-off-by: Your Name <you@example.com>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <main>
     <div class="game">
         <div class="controls">
-        <button>New Grid</button>
+        <button id="newGrid">New grid</button>
         </div>
         <div class="grid"></div>
     </div>
