--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Etch A Sketch</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="game.js" defer></script>
+    <link href="style.css" rel="stylesheet">
+    <script defer src="game.js"></script>
 </head>
 <body>
 <header>
@@ -12,7 +12,8 @@
 <main>
     <div class="game">
         <div class="controls">
-        <button id="newGrid">New grid</button>
+            <button id="newGrid">New grid</button>
+            <button id="eraseGrid">erase grid</button>
         </div>
         <div class="grid"></div>
     </div>
